cmake_minimum_required(VERSION 3.27)
project(DataStructure)

set(CMAKE_CXX_STANDARD 23)

add_executable(DataStructure main.cpp)
add_executable(DataStructure1 ADT.cpp)
add_executable(DataStructure2 Selection_Sort.cpp)
add_executable(DataStructure3 Insertion_Sort.cpp)
add_executable(DataStructure4 Bubble_Sort.cpp)
add_executable(DataStructure5 Bubble_Sort_Optimized.cpp)
add_executable(DataStructure6 Merge_Sort.cpp)
add_executable(DataStructure7 Quick_Sort.cpp)
add_executable(DataStructure8 Solving_Postfix_Expression.cpp)
add_executable(DataStructure9 Solving_Postfix_Expression2.cpp)
add_executable(DataStructure10 Infix_To_Postfix.cpp)
add_executable(DataStructure11 Linked_List.cpp)
add_executable(DataStructure12 double_Linked_List.cpp)
add_executable(DataStructure13 Binary_Search_Tree.cpp)
add_executable(DataStructure14 Heap_Sort.cpp)
add_executable(DataStructure15 Shell_Sort.cpp)
add_executable(DataStructure16 Count_Sort.cpp)
add_executable(DataStructure17 MergeSort2.cpp)
add_executable(DataStructure18 Radix_Sort.cpp)
add_executable(DataStructure19 DynamicArray.cpp)
add_executable(DataStructure20 test.cpp)
add_executable(DataStructure21 Stack_Using_LinkedList.cpp)
add_executable(DataStructure22 Stack_Using_Array.cpp)
add_executable(DataStructure23 Queue_Using_LinkedList.cpp)
add_executable(DataStructure24 Queue_Using_Array.cpp)
add_executable(DataStructure25 Student.cpp)
add_executable(DataStructure26 AVLTree.cpp)
add_executable(DataStructure27 HeapSortUsingNodes.cpp)
add_executable(DataStructure28 ItemsWithAVL.cpp)
add_executable(DataStructure29 AVL2.cpp)
add_executable(DataStructure30 AVL3.cpp)
add_executable(DataStructure31 Binary_Search_Tree2.cpp)
add_executable(DataStructure32 PriorityQueue.cpp)

